--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     ],
     "scripts": {
         "dev": "vite --config vite/config.dev.mjs",
-        "build": "vite build --config vite/config.prod.mjs"
+        "build": "vite build --config vite/config.prod.mjs",
+        "type-check": "tsc --noEmit"
     },
     "dependencies": {
         "phaser": "^3.90.0",
