--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,11 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Lint check
+              run: npm run lint
+
+            - name: Format check
+              run: npm run format:check
+
             - name: Type check
               run: npm run type-check
