Story 05: Verify and document build output
- Verified npm run build completes successfully
- Confirmed dist/ directory contains optimized assets with hashes
- Added preview script to package.json with --open flag
- Added --open flag to dev script for auto-browser launch
- Moved vitest.config.ts to vite/ subdirectory for consistency
- Updated test scripts to reference new vitest config location
- Tested file system deployment (dist/index.html works)
- Tested preview server with browser auto-open
- Updated README with deployment documentation
  - Added deployment section with GitHub Pages, Netlify, Vercel instructions
  - Added local file system deployment option
  - Added browser compatibility notes
- Added GitHub Pages deployment workflow
  - Triggers on push to main branch
  - Builds and deploys to GitHub Pages automatically
- Verified .gitignore excludes dist/ and coverage/
- All assets properly minified and optimized

--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "typescript"
   ],
   "scripts": {
-    "dev": "vite --config vite/config.dev.mjs",
+    "dev": "vite --config vite/config.dev.mjs --open",
     "build": "vite build --config vite/config.prod.mjs",
+    "preview": "vite preview --config vite/config.prod.mjs --open",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\"",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test": "vitest --config vite/vitest.config.ts",
+    "test:run": "vitest run --config vite/vitest.config.ts",
+    "test:coverage": "vitest run --coverage --config vite/vitest.config.ts",
+    "test:ui": "vitest --ui --config vite/vitest.config.ts"
   },
   "dependencies": {
     "phaser": "^3.90.0",
